fix: news fader items visibility

--- a/css/custom/app.css
+++ b/css/custom/app.css
@@ -1599,6 +1599,14 @@ header#header .content-wrapper {
 			width: var(--_pager-width)
 		}
 	}
+	ul.sy-list {
+		li.sy-slide:not(.sy-active) {
+			visibility: hidden;
+		}
+		li.sy-slide.sy-active {
+			visibility: visible;
+		}
+	}
 }
 .news_section {
 	grid-template-columns: 1fr;
